Styling bug updates
Trying to fix flex items from spilling out of container using flex prop.

--- a/styles.scss
+++ b/styles.scss
@@ -15,7 +15,7 @@ body {
     box-sizing: border-box;
     font-family: "Antonio", san-serif; 
     background: var(--mesa-blue-gradient);
-    p {
+     p {
       line-height: 1.5;
       margin: 0;
     }
@@ -60,21 +60,20 @@ body {
   /*********************
   GRID LAYOUT STYLING 
   *********************/
+  /*Fix flex box so it doesn't spill out of container*/
   .testimonial-grid {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
-    grid-template-rows: repeat(3, 1fr);
-/*     grid-gap: 60px 20px;
- */
+    /* grid-template-rows: repeat(3, 1fr); */
+     grid-template-rows: repeat(3, 1fr);
     grid-gap: 20px 20px;
     padding: 20px;
     width: 100%;
     max-width: 1200px;
-    height: min-content;
+     height: min-content;
     align-content: center; 
   /*   background: #f8f8ff; */
-/*     background: var(--mesa-blue-gradient);
- */    margin: 0 auto;
+    margin: 0 auto;
     align-items: center;
     justify-items: center;
   }
@@ -85,9 +84,8 @@ body {
     display: flex;
     flex-direction: row;
     justify-items: start;
+    align-self: baseline;
     margin: 0;
-    height: 405px;
-    max-height: 500px;
     flex-wrap: wrap;
     border-radius: 5px;
     padding: 0;
@@ -102,7 +100,7 @@ body {
       margin-top: 0;
       margin-right: 10%;
       min-width: 273px;
-      height: inherit;
+      height: 450px;
     }
     .alum-grad{ 
       order: 1;
@@ -110,7 +108,7 @@ body {
       height: 0; 
       margin-left: 59px;
       position: relative;
-      top: -30%;
+      top: -25%;
       left: 0;
     aside {
       display: inline-flex;
@@ -150,24 +148,31 @@ body {
     .review {
       order: 2;
       background: #fff;
-      &:after {
+      /*trying to fix flex items to fit grid container*/
+      display: flex;
+      justify-content: center;
+      align-content: center;
+      &:before {
          content: "\”";
-         bottom: 29%;
-         right: -82%;
-      }
-      &:after {
-        color: #212121;
+         bottom: 75%;
+         left: 75%;
+        /* color: #212121; */
+          color: #fff;
           height: 0;
           opacity: 0.5;
-          z-index: 1;
+          /* z-index: 1; */
           display: block;
           position: relative;
       }
       .highlight {
-        margin: 30px 45px;
-        margin-bottom: 15px;
+         margin: 30px 45px; 
+        /* margin-top: 30px;
+        margin-bottom: 15px; */
+       /*  margin-left: auto; */
         text-align: center;
         font-size: calc(1rem + (4 - 1) * ((100vw - 300px)/(1600 - 300)));
+        /* flex: 0.8; */
+        flex: 1;
       }
     }
     .alum-details {
@@ -178,6 +183,11 @@ body {
       margin: 0 auto;
       padding-bottom: 15px;
       width: 100%;
+      height: 100%;
+      display: flex;
+      flex-wrap: nowrap;
+      flex-direction: column;
+      flex: 1;
       p {
         &:nth-of-type(n+2) {
           color: #212121;
